--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">Alvin<span>Group</span></a>
+            <a href="#" class="logo">Alvin<span>Medical Group</span></a>
             <div class="hamburger" id="hamburger">
                 <i class="fas fa-bars"></i>
             </div>
@@ -570,8 +570,8 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <h1>Healthcare Marketing That Connects & Converts</h1>
-            <p>Alvin Group specializes in creating impactful marketing strategies for healthcare providers, pharmaceutical companies, and medical technology firms.</p>
+            <h1>Premium Healthcare Marketing That Connects & Converts</h1>
+            <p>Alvin Medical Group specializes in creating impactful marketing strategies for healthcare providers, pharmaceutical companies, and medical technology firms.</p>
             <a href="#contact" class="btn">Get Started</a>
         </div>
     </section>
@@ -736,7 +736,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Alvin Group. All rights reserved.</p>
+                <p>&copy; 2025 Alvin Medical Group. All rights reserved.</p>
             </div>
         </div>
     </footer>
