--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">Alvin<span>Medical Group</span></a>
+            <a href="#" class="logo">Alvin Medical<span>Group</span></a>
             <div class="hamburger" id="hamburger">
                 <i class="fas fa-bars"></i>
             </div>
