--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container">
         <h1>$EPOCH1970 Presale</h1>
         <p>Join the memecoin inspired by Elon Musk's Unix Epoch easter egg – Verified since January 1970!</p>
-        <p>Presale: Send SOL to get tokens airdropped later. Rate: 1 SOL = 1,000,000 $EPOCH1970 (placeholder).</p>
+        <p>Presale: Send SOL to get tokens airdropped later. Rate: 1 SOL = 1,000,000 $EPOCH1970.</p>
         <button id="connectButton">Connect Solana Wallet</button>
         <div id="walletInfo" style="display: none;">
             <p>Connected Wallet: <span id="walletAddress"></span></p>
@@ -85,7 +85,7 @@
         // JSON config
         const config = {
             tokenName: "$EPOCH1970",
-            presaleAddress: "YourPresaleWalletAddressHere", // Replace with actual Solana address
+            presaleAddress: "7HiYCrQXASerrznzkkwRD5JCz2838vLGTdKaQfmUvFtH", // Replace with actual Solana address
             network: "devnet", // or "mainnet-beta"
             rpcUrl: "https://api.devnet.solana.com", // or mainnet RPC
             tokensPerSol: 1000000 // Example rate
