--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>$EPOCH1970 Presale - Works on Phantom Mobile</title>
+  <title>$EPOCH1970 Presale - This is a one time catch. </title>
   <style>
     body { font-family: Arial, sans-serif; background:#111; color:#fff; margin:0; padding:20px; text-align:center; }
     .card { background:#1a1a1a; padding:30px; border-radius:16px; max-width:500px; margin:40px auto; box-shadow:0 10px 30px rgba(0,0,0,0.5); }
